fix: modal overflow

--- a/client/src/utils/modal/modal.less
+++ b/client/src/utils/modal/modal.less
@@ -51,6 +51,7 @@
         flex-direction: column;
         transform: scale(1);
         transition: 0.15s all;
+        overflow-wrap: break-word;
         &__inacative {
             transform: scale(0.5);
             max-height: 0px;
@@ -73,6 +74,7 @@
     button {
         margin-left: 9em;
         margin-right: 9em;
+        padding: 5px 20px;
     }
     &__buttons {
         display: flex;
